Fix width of blog post on small devices

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -258,6 +258,7 @@ hr {
     border-width:1px 0;
     padding:20px 0;
     margin:0 0 20px;
+    width: 100%;
   }
 
   header a small {
